--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,7 @@
 .cardContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .card {
@@ -107,10 +108,6 @@
     margin-bottom: 14px;
 }
 
-.bottomText {
-    margin-right: 6px;
-}
-
 .bottomTextDisabled {
     color: #FFFF66;
 }
@@ -120,4 +117,5 @@
     text-decoration-style: dashed;
     color: #1698D9;
     cursor: pointer;
+    margin-left: 6px;
 }
