--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,52 @@
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  min-height: 100%;
+@media screen and (max-width: 1920px) {
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
+    }
 }
+
+@media screen and (max-width: 1024px) {
+    .container {
+        max-width: 1000px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        max-width: 700px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .container {
+        max-width: 425px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .container {
+        max-width: 290px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        min-height: 100%;
+    }
+}
+
+
+
